Icons stle fixes: fixed icon counter was under icons on small resolution fixed icons spacing

--- a/css/game-icons.css
+++ b/css/game-icons.css
@@ -8,17 +8,16 @@
 
 
 #gamesSliderPaged li img {
-    margin: 0;
+    margin:  -webkit-calc(12% - 80px); /*1/4 of container space - image space*/
+    margin:  -moz-calc(12% - 80px); /*1/4 of container space - image space*/
     width: 160px;
     height: 160px;
-    margin-left: 130px;
-    margin-top: 50px;
 }
 
 #currentGamesPageNumber{
     position: absolute;
     top: 15%;
-    left: 85%;
+    right: 4%;
     font-size: 20px;
     font-weight: bold;
 }
